# CudaSift

./: CMakeLists.txt  mainSift.cpp
data/: limg_pts.pgm
include/: cudaSift.h
src/: cudaImage.cu  cudaSift.cpp  cudaSiftH.cu  geomFuncs.h  matching.cu
